--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flex pro</title>
 </head>
 <body>
-    
+    <div class="content">
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+    </div>
 </body>
 </html>
